gh-pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://abhis12321.github.io/kanban_board",
+  "homepage": "http://abhis12321.github.io/To-Do-List-or-Task-Manager",
   "name": "kanban_board",
   "version": "0.1.0",
   "private": true,
